# mybott1

articubot_one/: CMakeLists.txt
articubot_one/config/: my_controllers.yaml
articubot_one/description/: gazebo.xacro  gazebo_control.xacro  robot.urdf.xacro  robot.urdf.xacro.bak  robot_core.xacro
articubot_one/launch/: fast_complex_demo.launch.py  fire_demo.launch.py  fire_sim.launch.py  fire_sim_working.launch.py  fire_tracking.launch.py  fire_tracking_complete.launch.py  fire_world_demo.launch.py  simple_fire_demo.launch.py  simple_fire_gazebo.launch.py  simple_fire_sim.launch.py
articubot_one/models/: fire_box.sdf
articubot_one/scripts/: debug_fire.py  detect_fire.py  detect_red.py  direct_cmd_test.py  follow_fire.py  follow_fire_exploration.py  follow_fire_fast.py  test_move.py  test_movement.py
articubot_one/worlds/: complex_fire_world.sdf
dev_ws/articubot_one/: __init__.py  fire_detector.py  setup.py  water_pump_controller.py
dev_ws/install/: local_setup.sh  setup.sh
dev_ws/log/: latest_build
dev_ws/src/articubot_one/: CMakeLists.txt  package.xml
dev_ws/src/articubot_one/config/: fire_detection_params.yaml  my_controllers.yaml
dev_ws/src/articubot_one/description/: gazebo_control.xacro  robot_core.xacro
dev_ws/src/articubot_one/launch/: launch_sim.launch.py
dev_ws/src/articubot_one/worlds/: fire_world.world
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/articubot_one/lib/articubot_one/: follow_fire.py
ros2_ws/install/articubot_one/local/lib/python3.10/dist-packages/articubot_one-0.0.0-py3.10.egg-info/: SOURCES.txt
ros2_ws/install/articubot_one/share/ament_index/resource_index/package_run_dependencies/: articubot_one
ros2_ws/install/articubot_one/share/articubot_one/: local_setup.sh  package.sh
ros2_ws/install/articubot_one/share/articubot_one/description/: robot_core.xacro
ros2_ws/log/: latest_build
ros2_ws/src/articubot_one/: package.xml
ros2_ws/src/articubot_one/worlds/: fire_world.sdf
src/articubot_one/: CMakeLists.txt
src/articubot_one/description/: camera.xacro  gazebo_control.xacro.bak  ros2_control.xacro.bak
src/articubot_one/launch/: autonomous_fire_sim.launch.py  fire_tracking_complete.launch.py  test_no_control.lauch.py
src/articubot_one/scripts/: follow_fire.py
src/articubot_one/worlds/: fire_world.sdf
